# USB2BLE

./: .gitignore  ARCHITECTURE.md  CFG_DIAG_MATRIX.md  CFG_ESCALATION_PACKET.md  CFG_FIX_REPORT.md  CFG_INCIDENT_REPORT.md  CFG_TRANSPORT_BINDING_AUDIT.md  CFG_TRANSPORT_FIX_FINALIZATION.md  CFG_TRANSPORT_ISOLATION_MATRIX.md  CFG_TRANSPORT_ISOLATION_MATRIX_POSTFIX.md  CI_WEB_ENFORCEMENT_REPORT.md  CMakeLists.txt  CONFIG_COMPILER_REPORT.md  CONFIG_TRANSPORT_CONTRACT.md  CRASH_RECOVERY_STATE.md  CURRENT_TASK.md  DEPENDENCY_GRAPH.md  DOC_ALIGNMENT_REPORT.md  DOC_TRUTH_ALIGNMENT_REPORT.md  ENV_READY_REPORT.md  FEATURE_MATRIX.md  FINAL_DELTA_EXECUTION_PLAN.md  HARDWARE_VALIDATION_PACK.md  HID_INGESTION_MATRIX.md  IMPLEMENTATION_PLAN.md  INTEGRATION_DELTA.md  MAPPING_CORRECTNESS_MATRIX.md  PROFILE_OUTPUT_MATRIX.md  README.md  SCOPE_DECISIONS.md  TEST_STRATEGY.md  TODO.md  UPDATED_MILESTONE_STATUS.md  VALIDATION.md  WEB_PROFILE_UI_MATRIX.md  browser-roundtrip-proof.md
.github/workflows/: ci.yml  deploy-webapp.yml  release.yml
charm-web-companion/: ARCHITECTURE.md  HANDOFF.md  README.md  global.d.ts  metadata.json  next.config.ts  package-lock.json  package.json  vitest.config.ts
charm-web-companion/__tests__/: config-view.test.tsx  config.test.ts  console.test.ts  environment.test.tsx  flash.test.ts  rendering.test.tsx
charm-web-companion/app/: page.tsx
charm-web-companion/components/: CapabilityBanner.tsx
charm-web-companion/components/views/: ConfigView.tsx  ConsoleView.tsx  FlashView.tsx  HelpView.tsx  ValidateView.tsx
charm-web-companion/docs/: serial-lifecycle-state-machine.md
charm-web-companion/lib/: configCompiler.ts  configProfiles.ts  schema.ts  serialLifecycle.ts  store.ts  types.ts
charm-web-companion/lib/adapters/: ArtifactIngestion.ts  BrowserGamepad.ts  Flasher.ts  SerialConfigTransport.ts  SerialMonitor.ts  types.ts
components/charm_app/: CMakeLists.txt
components/charm_app/include/charm/app/: app_bootstrap.hpp  config_activation.hpp  config_transport_runtime_adapter.hpp  config_transport_service.hpp  runtime_data_plane.hpp  startup_storage_lifecycle.hpp
components/charm_app/src/: app_bootstrap.cpp  config_activation.cpp  config_transport_runtime_adapter.cpp  config_transport_service.cpp  runtime_data_plane.cpp  startup_storage_lifecycle.cpp
components/charm_contracts/include/charm/contracts/: common_types.hpp  config_transport_types.hpp  error_types.hpp  events.hpp  identity_types.hpp  registry_types.hpp  report_types.hpp  requests.hpp  status_types.hpp  transport_types.hpp
components/charm_core/: CMakeLists.txt
components/charm_core/include/charm/core/: config_compiler.hpp  control_plane.hpp  decode_plan.hpp  device_registry.hpp  hid_decoder.hpp  hid_semantic_model.hpp  logical_state.hpp  mapping_bundle.hpp  mapping_engine.hpp  profile_manager.hpp  recovery_policy.hpp  supervisor.hpp
components/charm_core/src/: config_compiler.cpp  decode_plan.cpp  device_registry.cpp  hid_decoder.cpp  hid_semantic_model.cpp  logical_state.cpp  mapping_bundle.cpp  mapping_engine.cpp  profile_generic_gamepad_encoder.cpp  profile_manager.cpp  profile_wireless_xbox_controller_encoder.cpp  recovery_policy.cpp  supervisor.cpp
components/charm_platform_ble/: CMakeLists.txt
components/charm_platform_ble/include/charm/platform/: ble_transport_adapter.hpp
components/charm_platform_ble/src/: ble_transport_adapter.cpp
components/charm_platform_storage/: CMakeLists.txt
components/charm_platform_storage/include/charm/platform/: config_store_nvs.hpp
components/charm_platform_storage/src/: config_store_nvs.cpp
components/charm_platform_time/: CMakeLists.txt
components/charm_platform_time/include/charm/platform/: time_port_esp_idf.hpp
components/charm_platform_time/src/: time_port_esp_idf.cpp
components/charm_platform_usb/: CMakeLists.txt  idf_component.yml
components/charm_platform_usb/include/charm/platform/: usb_host_adapter.hpp
components/charm_platform_usb/src/: usb_host_adapter.cpp
components/charm_ports/: CMakeLists.txt
components/charm_ports/include/charm/ports/: ble_transport_port.hpp  config_store_port.hpp  time_port.hpp  usb_host_port.hpp
components/charm_test_support/: CMakeLists.txt
components/charm_test_support/include/: nvs.h  nvs_flash.h
components/charm_test_support/include/charm/test_support/: fake_ble_transport_port.hpp  fake_config_store_port.hpp  fake_time_port.hpp  fake_usb_host_port.hpp
components/charm_test_support/src/: esp_timer_mock.cpp  nvs_mock.cpp
evidence/20260406/ENV-BOOTSTRAP/: commands.txt  result.json
evidence/20260407/CFG-01/: commands.txt  result.json  scenario-notes.md
evidence/20260407/CFG-02/: commands.txt  result.json  scenario-notes.md
evidence/20260407/CFG-BROWSER-ROUNDTRIP/: commands.txt  result.json
evidence/20260407/CFG-TRANSPORT-AUDIT/: commands.txt  result.json
evidence/20260407/CFG-TRANSPORT-ISO/: commands.txt  result.json
evidence/20260407/CFG-TRANSPORT-POSTFIX/: commands.txt  result.json
evidence/20260407/ENV-READY/: commands.txt  result.json
main/: CMakeLists.txt  main.cpp
scripts/: generate_release_integrity.sh  hardware_evidence.sh  repro_cfg_timeout.py
tests/unit/: CMakeLists.txt  test_ble_transport_adapter.cpp  test_config_activation.cpp  test_config_compiler.cpp  test_config_transport_runtime_adapter.cpp  test_config_transport_service.cpp  test_decode_plan.cpp  test_device_registry.cpp  test_hid_decoder.cpp  test_hid_semantic_model.cpp  test_logical_state.cpp  test_mapping_bundle.cpp  test_mapping_engine.cpp  test_profile_generic_gamepad_encoder.cpp  test_profile_manager.cpp  test_profile_wireless_xbox_controller_encoder.cpp  test_recovery_policy.cpp  test_runtime_data_plane.cpp  test_startup_storage_lifecycle.cpp  test_supervisor.cpp  test_usb_host_adapter.cpp
